--- a/style.css
+++ b/style.css
@@ -34,3 +34,16 @@ footer {
     text-align: center;
     padding: 1rem;
 }
+
+.hero-banner {
+  display: block;
+  width: 100%;
+  margin: 0;
+  padding: 0;
+}
+
+.hero-banner img {
+  width: 100%;
+  height: auto;
+  display: block;
+}
