--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@ body {
 }
 
 header {
-  background-color: #444;
+  background-color: #6B6B6B;
   color: #fff;
   text-align: center;
   padding: 2rem 1rem;
@@ -23,7 +23,7 @@ section {
 }
 
 footer {
-  background-color: #222;
+  background-color: #6B6B6B;
   color: #ccc;
   text-align: center;
   padding: 1rem;
