--- a/style.css
+++ b/style.css
@@ -120,8 +120,10 @@ footer {
 }
 
 /* Tiny phones (optional fine-tune) */
-@media (max-width: 400px) {
+@media (max-width: 700px) {
   .hero-text {
-    font-size: 36pt;
+    font-size: 1.5rem;
+    line-height: 1.4;
+    bottom: 5%;
   }
 }
