--- a/style.css
+++ b/style.css
@@ -127,7 +127,8 @@ footer {
   }
 
   .tagline {
-   font-family: 'vladimir', cursive, Arial, sans-serif;font-size: 2.5rem;
+    font-family: 'vladimir', cursive, Arial, sans-serif;
+    font-size: 2.5rem;
     margin: 1rem auto;
     padding: 0 1rem;
   }
